# GamesApplication

./: CMakeLists.txt
GamesApplication/: GamesApplication.sln
GamesApplication/GamesApplication/: Controller.cpp  Controller.h  DataModel.cpp  DataModel.h  Dialoges.h  FieldedAreaGame.h  Game.h  GameArea.cpp  GameArea.h  GameAreaObserver.h  GameInformationPanel.cpp  GameInformationPanel.h  GameInformationPanelObserver.h  GameLibraryTest.cpp  GameSwitcher.cpp  GameSwitcher.h  GameSwitcherObserver.h  GameTest.cpp  GamesApplication.qrc  GamesApplication.ui  GamesApplication.vcxproj  GamesApplication.vcxproj.filters  Resources.h  Sudoku.cpp  Sudoku.h  Tags.cpp  Tags.h  TicTacToe.cpp  TicTacToe.h  TicTacToePanel.cpp  TicTacToePanel.h  UserTest.cpp  View.cpp  View.h  main.cpp
GamesApplicationAndroid/: settings.gradle.kts
GamesApplicationAndroid/app/: build.gradle.kts
GamesApplicationAndroid/app/src/main/: AndroidManifest.xml
GamesApplicationAndroid/app/src/main/cpp/: CMakeLists.txt  Game.h  Tags.cpp  Tags.h  TicTacToe.cpp  TicTacToe.h  native-lib.cpp
GamesApplicationAndroid/app/src/main/java/com/example/gamesapplication/: Game.java  GameArea.java  GameInformationPanel.java  (+5 more)
GamesApplicationAndroid/app/src/main/res/drawable/: cell_border.xml
GamesApplicationAndroid/app/src/main/res/layout/: activity_main.xml  dialog_name_input.xml  nav_header.xml
GamesApplicationAndroid/app/src/main/res/menu/: drawer_menu.xml
GamesApplicationAndroid/app/src/main/res/values/: strings.xml  styles.xml
GamesApplicationAndroid/gradle/wrapper/: gradle-wrapper.properties
